k8s-apps/media/jellyfin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: argocd
